--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,22 @@
 language: python
 python:
   - "3.6"
-#before_install:
-install:
+
+services: postgresql
+
+before_install:
+  - export DJANGO_SETTINGS_MODULE=your_project.settings
+  - export PYTHONPATH=$HOME/builds/juliabiro/confabulations_v3
+  - export PIP_USE_MIRRORS=true
+
+  install:
   - pip install -r requirements.txt
-#before_script:
+  - pip install django==$DJANGO --quiet
+  - pip install psycopg2 --quiet
+
+before_script:
+  - psql -c "CREATE DATABASE mydb;" -U postgres
+
 script:
   - pylint confabulation
+  - - python manage.py syncdb --noinput
