--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ before_script:
   - psql -c "CREATE DATABASE mydb;" -U postgres
 
 script:
+  - python manage.py syncdb --noinput
   - pylint confabulation
-  - - python manage.py syncdb --noinput
