--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 
 install:
   - pip install -r requirements.txt
-  - pip install django==$DJANGO --quiet
+  - pip install django==1.11 --quiet
   - pip install psycopg2 --quiet
 
 before_script:
