--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ before_script:
 
 script:
   - ./smart_pylint 
-  - python manage.py syncdb --noinput
+  - python manage.py makemigrations
+  - python manage.py migrate
