--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ install:
   - pip install psycopg2 --quiet
 
 before_script:
-  - psql -c "CREATE DATABASE mydb;" -U postgres
+  - psql -c "CREATE DATABASE travisci;" -U postgres
 
 script:
-  - ./smart_pylint 
+  - ./smart_pylint confabulation/
   - python manage.py makemigrations
   - python manage.py migrate
