--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,23 @@
 language: python
-#before_install:
-install: true
-#before_script:
+python:
+  - "3.6"
+
+services: postgresql
+
+before_install:
+  - export DJANGO_SETTINGS_MODULE=dbbackend.settings
+  - export PYTHONPATH=$HOME/builds/juliabiro/confabulations_v3
+  - export PIP_USE_MIRRORS=true
+
+install:
+  - pip install -r requirements.txt
+  - pip install django==1.11 --quiet
+  - pip install psycopg2 --quiet
+
+before_script:
+  - psql -c "CREATE DATABASE travisci;" -U postgres
+
 script:
-  - pylint confabulation
+  - ./smart_pylint confabulation/
+  - python manage.py makemigrations
+  - python manage.py migrate
