--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install:
   - pip install psycopg2 --quiet
 
 script:
+  - ./smart_pylint dbbackend/
   - ./smart_pylint confabulation/
   - python manage.py makemigrations
   - python manage.py migrate
