working test for a view
needs modification in models too

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,4 @@ script:
   - ./smart_pylint confabulation/
   - python manage.py makemigrations
   - python manage.py migrate
+  - python manage.py test confabulation/tests
