--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,10 @@ install:
   - pip install django==1.11 --quiet
   - pip install psycopg2 --quiet
 
-env:
-  global:
-    - AWS_ACCESS_KEY_ID=AKIAJHVLPF3SDDTOYKXQ
-    - AWS_SECRET_ACCESS_KEY=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
-
 script:
   - ./smart_pylint dbbackend/
   - ./smart_pylint confabulation/
   - python manage.py makemigrations
   - python manage.py migrate
+  - python manage.py collectstatic 
   - python manage.py test confabulation/tests
