--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_install:
   - export PIP_USE_MIRRORS=true
 
 install:
+  - pip install --upgrade pip
   - pip install -r requirements.txt
   - pip install django==1.11 --quiet
   - pip install psycopg2 --quiet
